--- a/notebooks/Ej10.ipynb
+++ b/notebooks/Ej10.ipynb
@@ -1,13 +1,138 @@
 {
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "e4a49b13-65dd-49d0-a064-8874fc8f7eef",
+      "metadata": {},
+      "source": [
+        "# Ejercicio 10"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b889332f-79e6-4aea-8446-2d4b3299e012",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import os\n",
+        "\n",
+        "sys.path.append(os.path.abspath(\"../src\"))\n",
+        "from Funciones import *\n",
+        "rounds = [\n",
+        "{\n",
+        "'Shadow': {'kills': 2, 'assists': 1, 'deaths': True},\n",
+        "'Blaze': {'kills': 1, 'assists': 0, 'deaths': False},\n",
+        "'Viper': {'kills': 1, 'assists': 2, 'deaths': True},\n",
+        "'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+        "'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+        "},\n",
+        "{\n",
+        "'Shadow': {'kills': 0, 'assists': 2, 'deaths': False},\n",
+        "'Blaze': {'kills': 2, 'assists': 0, 'deaths': True},\n",
+        "'Viper': {'kills': 1, 'assists': 1, 'deaths': False},\n",
+        "'Frost': {'kills': 2, 'assists': 1, 'deaths': True},\n",
+        "'Reaper': {'kills': 0, 'assists': 1, 'deaths': False}\n",
+        "},\n",
+        "{\n",
+        "'Shadow': {'kills': 1, 'assists': 0, 'deaths': False},\n",
+        "'Blaze': {'kills': 2, 'assists': 2, 'deaths': True},\n",
+        "'Viper': {'kills': 1, 'assists': 1, 'deaths': True},\n",
+        "'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+        "'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+        "},\n",
+        "{\n",
+        "'Shadow': {'kills': 2, 'assists': 1, 'deaths': False},\n",
+        "'Blaze': {'kills': 1, 'assists': 0, 'deaths': True},\n",
+        "'Viper': {'kills': 0, 'assists': 2, 'deaths': False},\n",
+        "'Frost': {'kills': 1, 'assists': 1, 'deaths': True},\n",
+        "'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+        "},\n",
+        "{\n",
+        "'Shadow': {'kills': 1, 'assists': 2, 'deaths': True},\n",
+        "'Blaze': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+        "'Viper': {'kills': 2, 'assists': 0, 'deaths': True},\n",
+        "'Frost': {'kills': 1, 'assists': 1, 'deaths': False},\n",
+        "'Reaper': {'kills': 1, 'assists': 1, 'deaths': True}\n",
+        "} ]\n",
+        "\n",
+        "processRounds(rounds)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d53ac857",
+      "metadata": {},
+      "source": [
+        "# Ronda: 1\n",
+        "\n",
+        "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+        "-----------------------------------------------------------\n",
+        "| Shadow    | 2     | 1          | 1     | 1     | 6     |\n",
+        "-----------------------------------------------------------\n",
+        "| Viper     | 1     | 2          | 1     | 0     | 4     |\n",
+        "-----------------------------------------------------------\n",
+        "| Reaper    | 1     | 1          | 0     | 0     | 4     |\n",
+        "-----------------------------------------------------------\n",
+        "| Blaze     | 1     | 0          | 0     | 0     | 3     |\n",
+        "-----------------------------------------------------------\n",
+        "| Frost     | 0     | 1          | 0     | 0     | 1     |\n",
+        "-----------------------------------------------------------\n",
+        "\n",
+        "# Ronda: 2\n",
+        "\n",
+        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+        "------------------------------------------------\n",
+        "Shadow     2      3        1       1     8      \n",
+        "Viper      2      3        1       0     8      \n",
+        "Blaze      3      0        1       0     8      \n",
+        "Frost      2      2        1       1     7      \n",
+        "Reaper     1      2        0       0     5      \n",
+        "\n",
+        "# Ronda: 3\n",
+        "\n",
+        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+        "------------------------------------------------\n",
+        "Blaze      5      2        2       1     15     \n",
+        "Viper      3      4        2       0     11     \n",
+        "Shadow     3      3        1       1     11     \n",
+        "Reaper     2      3        0       0     9      \n",
+        "Frost      2      3        1       1     8      \n",
+        "\n",
+        "# Ronda: 4\n",
+        "\n",
+        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+        "------------------------------------------------\n",
+        "Shadow     5      4        1       2     18     \n",
+        "Blaze      6      2        3       1     17     \n",
+        "Viper      3      6        2       0     13     \n",
+        "Reaper     3      4        0       0     13     \n",
+        "Frost      3      4        2       1     11     \n",
+        "\n",
+        "# Ronda Final: \n",
+        "\n",
+        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+        "------------------------------------------------\n",
+        "Shadow     6      6        2       2     22     \n",
+        "Blaze      6      3        3       1     18     \n",
+        "Viper      5      6        3       1     18     \n",
+        "Reaper     4      5        1       0     16     \n",
+        "Frost      4      5        2       1     15     "
+      ]
+    }
+  ],
   "metadata": {
     "kernelspec": {
-      "name": "python",
-      "display_name": "Python (Pyodide)",
-      "language": "python"
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -15,27 +140,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.13.2"
     }
   },
-  "nbformat_minor": 5,
   "nbformat": 4,
-  "cells": [
-    {
-      "id": "e4a49b13-65dd-49d0-a064-8874fc8f7eef",
-      "cell_type": "markdown",
-      "source": "# Ejercicio 10",
-      "metadata": {}
-    },
-    {
-      "id": "b889332f-79e6-4aea-8446-2d4b3299e012",
-      "cell_type": "code",
-      "source": "from src import processRounds\nrounds = [\n{\n'Shadow': {'kills': 2, 'assists': 1, 'deaths': True},\n'Blaze': {'kills': 1, 'assists': 0, 'deaths': False},\n'Viper': {'kills': 1, 'assists': 2, 'deaths': True},\n'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n},\n{\n'Shadow': {'kills': 0, 'assists': 2, 'deaths': False},\n'Blaze': {'kills': 2, 'assists': 0, 'deaths': True},\n'Viper': {'kills': 1, 'assists': 1, 'deaths': False},\n'Frost': {'kills': 2, 'assists': 1, 'deaths': True},\n'Reaper': {'kills': 0, 'assists': 1, 'deaths': False}\n},\n{\n'Shadow': {'kills': 1, 'assists': 0, 'deaths': False},\n'Blaze': {'kills': 2, 'assists': 2, 'deaths': True},\n'Viper': {'kills': 1, 'assists': 1, 'deaths': True},\n'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n},\n{\n'Shadow': {'kills': 2, 'assists': 1, 'deaths': False},\n'Blaze': {'kills': 1, 'assists': 0, 'deaths': True},\n'Viper': {'kills': 0, 'assists': 2, 'deaths': False},\n'Frost': {'kills': 1, 'assists': 1, 'deaths': True},\n'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n},\n{\n'Shadow': {'kills': 1, 'assists': 2, 'deaths': True},\n'Blaze': {'kills': 0, 'assists': 1, 'deaths': False},\n'Viper': {'kills': 2, 'assists': 0, 'deaths': True},\n'Frost': {'kills': 1, 'assists': 1, 'deaths': False},\n'Reaper': {'kills': 1, 'assists': 1, 'deaths': True}\n} ]\n\nprocessRounds(rounds)",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    }
-  ]
+  "nbformat_minor": 5
 }
