Se Mejora la muestra previa de las tablas de rondas

--- a/notebooks/Ej10.ipynb
+++ b/notebooks/Ej10.ipynb
@@ -10,12 +10,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "b889332f-79e6-4aea-8446-2d4b3299e012",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Ronda: 1\n",
+            "\n",
+            "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+            "------------------------------------------------\n",
+            "Shadow     2      1        1       1     6      \n",
+            "Viper      1      2        1       0     4      \n",
+            "Reaper     1      1        0       0     4      \n",
+            "Blaze      1      0        0       0     3      \n",
+            "Frost      0      1        0       0     1      \n",
+            "\n",
+            " Ronda: 2\n",
+            "\n",
+            "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+            "------------------------------------------------\n",
+            "Shadow     2      3        1       1     8      \n",
+            "Viper      2      3        1       0     8      \n",
+            "Blaze      3      0        1       0     8      \n",
+            "Frost      2      2        1       1     7      \n",
+            "Reaper     1      2        0       0     5      \n",
+            "\n",
+            " Ronda: 3\n",
+            "\n",
+            "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+            "------------------------------------------------\n",
+            "Blaze      5      2        2       1     15     \n",
+            "Viper      3      4        2       0     11     \n",
+            "Shadow     3      3        1       1     11     \n",
+            "Reaper     2      3        0       0     9      \n",
+            "Frost      2      3        1       1     8      \n",
+            "\n",
+            " Ronda: 4\n",
+            "\n",
+            "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+            "------------------------------------------------\n",
+            "Shadow     5      4        1       2     18     \n",
+            "Blaze      6      2        3       1     17     \n",
+            "Viper      3      6        2       0     13     \n",
+            "Reaper     3      4        0       0     13     \n",
+            "Frost      3      4        2       1     11     \n",
+            "\n",
+            " Ronda Final: \n",
+            "\n",
+            "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
+            "------------------------------------------------\n",
+            "Shadow     6      6        2       2     22     \n",
+            "Blaze      6      3        3       1     18     \n",
+            "Viper      5      6        3       1     18     \n",
+            "Reaper     4      5        1       0     16     \n",
+            "Frost      4      5        2       1     15     \n"
+          ]
+        }
+      ],
       "source": [
         "import sys\n",
         "import os\n",
@@ -67,60 +124,57 @@
       "id": "d53ac857",
       "metadata": {},
       "source": [
+        "# Reprecentacion del contenido devuelto\n",
+        "\n",
         "# Ronda: 1\n",
         "\n",
-        "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
-        "-----------------------------------------------------------\n",
-        "| Shadow    | 2     | 1          | 1     | 1     | 6     |\n",
-        "-----------------------------------------------------------\n",
-        "| Viper     | 1     | 2          | 1     | 0     | 4     |\n",
-        "-----------------------------------------------------------\n",
-        "| Reaper    | 1     | 1          | 0     | 0     | 4     |\n",
-        "-----------------------------------------------------------\n",
-        "| Blaze     | 1     | 0          | 0     | 0     | 3     |\n",
-        "-----------------------------------------------------------\n",
-        "| Frost     | 0     | 1          | 0     | 0     | 1     |\n",
-        "-----------------------------------------------------------\n",
+        "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
+        "|--------|-------|---------|--------|------|--------|\n",
+        "| Shadow | 2     | 1       | 1      | 1    | 6      |\n",
+        "| Viper  | 1     | 2       | 1      | 0    | 4      |\n",
+        "| Reaper | 1     | 1       | 0      | 0    | 4      |\n",
+        "| Blaze  | 1     | 0       | 0      | 0    | 3      |\n",
+        "| Frost  | 0     | 1       | 0      | 0    | 1      |\n",
         "\n",
         "# Ronda: 2\n",
         "\n",
-        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
-        "------------------------------------------------\n",
-        "Shadow     2      3        1       1     8      \n",
-        "Viper      2      3        1       0     8      \n",
-        "Blaze      3      0        1       0     8      \n",
-        "Frost      2      2        1       1     7      \n",
-        "Reaper     1      2        0       0     5      \n",
+        "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
+        "|--------|-------|---------|--------|------|--------|\n",
+        "| Shadow | 2     | 3       | 1      | 1    | 8      |\n",
+        "| Viper  | 2     | 3       | 1      | 0    | 8      |\n",
+        "| Blaze  | 3     | 0       | 1      | 0    | 8      |\n",
+        "| Frost  | 2     | 2       | 1      | 1    | 7      |\n",
+        "| Reaper | 1     | 2       | 0      | 0    | 5      |\n",
         "\n",
         "# Ronda: 3\n",
         "\n",
-        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
-        "------------------------------------------------\n",
-        "Blaze      5      2        2       1     15     \n",
-        "Viper      3      4        2       0     11     \n",
-        "Shadow     3      3        1       1     11     \n",
-        "Reaper     2      3        0       0     9      \n",
-        "Frost      2      3        1       1     8      \n",
+        "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
+        "|--------|-------|---------|--------|------|--------|\n",
+        "| Blaze  | 5     | 2       | 2      | 1    | 15     |\n",
+        "| Viper  | 3     | 4       | 2      | 0    | 11     |\n",
+        "| Shadow | 3     | 3       | 1      | 1    | 11     |\n",
+        "| Reaper | 2     | 3       | 0      | 0    | 9      |\n",
+        "| Frost  | 2     | 3       | 1      | 1    | 8      |\n",
         "\n",
         "# Ronda: 4\n",
         "\n",
-        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
-        "------------------------------------------------\n",
-        "Shadow     5      4        1       2     18     \n",
-        "Blaze      6      2        3       1     17     \n",
-        "Viper      3      6        2       0     13     \n",
-        "Reaper     3      4        0       0     13     \n",
-        "Frost      3      4        2       1     11     \n",
+        "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
+        "|--------|-------|---------|--------|------|--------|\n",
+        "| Shadow | 5     | 4       | 1      | 2    | 18     |\n",
+        "| Blaze  | 6     | 2       | 3      | 1    | 17     |\n",
+        "| Viper  | 3     | 6       | 2      | 0    | 13     |\n",
+        "| Reaper | 3     | 4       | 0      | 0    | 13     |\n",
+        "| Frost  | 3     | 4       | 2      | 1    | 11     |\n",
         "\n",
-        "# Ronda Final: \n",
+        "# Ronda Final\n",
         "\n",
-        "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
-        "------------------------------------------------\n",
-        "Shadow     6      6        2       2     22     \n",
-        "Blaze      6      3        3       1     18     \n",
-        "Viper      5      6        3       1     18     \n",
-        "Reaper     4      5        1       0     16     \n",
-        "Frost      4      5        2       1     15     "
+        "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
+        "|--------|-------|---------|--------|------|--------|\n",
+        "| Shadow | 6     | 6       | 2      | 2    | 22     |\n",
+        "| Blaze  | 6     | 3       | 3      | 1    | 18     |\n",
+        "| Viper  | 5     | 6       | 3      | 1    | 18     |\n",
+        "| Reaper | 4     | 5       | 1      | 0    | 16     |\n",
+        "| Frost  | 4     | 5       | 2      | 1    | 15     |\n"
       ]
     }
   ],
