Actualizamos los archivos

--- a/notebooks/Ej10.ipynb
+++ b/notebooks/Ej10.ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "id": "b889332f-79e6-4aea-8446-2d4b3299e012",
       "metadata": {
         "trusted": true
@@ -31,6 +31,8 @@
             "Blaze      1      0        0       0     3      \n",
             "Frost      0      1        0       0     1      \n",
             "\n",
+            " El MVP de esta ronda es  Shadow\n",
+            "\n",
             " Ronda: 2\n",
             "\n",
             "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
@@ -40,6 +42,8 @@
             "Blaze      3      0        1       0     8      \n",
             "Frost      2      2        1       1     7      \n",
             "Reaper     1      2        0       0     5      \n",
+            "\n",
+            " El MVP de esta ronda es  Frost\n",
             "\n",
             " Ronda: 3\n",
             "\n",
@@ -51,6 +55,8 @@
             "Reaper     2      3        0       0     9      \n",
             "Frost      2      3        1       1     8      \n",
             "\n",
+            " El MVP de esta ronda es  Blaze\n",
+            "\n",
             " Ronda: 4\n",
             "\n",
             "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
@@ -61,6 +67,8 @@
             "Reaper     3      4        0       0     13     \n",
             "Frost      3      4        2       1     11     \n",
             "\n",
+            " El MVP de esta ronda es  Shadow\n",
+            "\n",
             " Ronda Final: \n",
             "\n",
             "Player     Kills  Assists  Deaths  MVPs  Puntos \n",
@@ -69,7 +77,9 @@
             "Blaze      6      3        3       1     18     \n",
             "Viper      5      6        3       1     18     \n",
             "Reaper     4      5        1       0     16     \n",
-            "Frost      4      5        2       1     15     \n"
+            "Frost      4      5        2       1     15     \n",
+            "\n",
+            " El MVP de esta ronda es  Viper\n"
           ]
         }
       ],
@@ -79,6 +89,7 @@
         "\n",
         "sys.path.append(os.path.abspath(\"../src\"))\n",
         "from Funciones import *\n",
+        "\n",
         "rounds = [\n",
         "{\n",
         "'Shadow': {'kills': 2, 'assists': 1, 'deaths': True},\n",
@@ -136,6 +147,8 @@
         "| Blaze  | 1     | 0       | 0      | 0    | 3      |\n",
         "| Frost  | 0     | 1       | 0      | 0    | 1      |\n",
         "\n",
+        "El MVP de esta ronda es  Shadow\n",
+        "\n",
         "# Ronda: 2\n",
         "\n",
         "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
@@ -145,6 +158,8 @@
         "| Blaze  | 3     | 0       | 1      | 0    | 8      |\n",
         "| Frost  | 2     | 2       | 1      | 1    | 7      |\n",
         "| Reaper | 1     | 2       | 0      | 0    | 5      |\n",
+        "\n",
+        "El MVP de esta ronda es  Frost\n",
         "\n",
         "# Ronda: 3\n",
         "\n",
@@ -156,6 +171,8 @@
         "| Reaper | 2     | 3       | 0      | 0    | 9      |\n",
         "| Frost  | 2     | 3       | 1      | 1    | 8      |\n",
         "\n",
+        "El MVP de esta ronda es  Blaze\n",
+        "\n",
         "# Ronda: 4\n",
         "\n",
         "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
@@ -166,6 +183,8 @@
         "| Reaper | 3     | 4       | 0      | 0    | 13     |\n",
         "| Frost  | 3     | 4       | 2      | 1    | 11     |\n",
         "\n",
+        "El MVP de esta ronda es  Shadow\n",
+        "\n",
         "# Ronda Final\n",
         "\n",
         "| Player | Kills | Assists | Deaths | MVPs | Puntos |\n",
@@ -174,7 +193,9 @@
         "| Blaze  | 6     | 3       | 3      | 1    | 18     |\n",
         "| Viper  | 5     | 6       | 3      | 1    | 18     |\n",
         "| Reaper | 4     | 5       | 1      | 0    | 16     |\n",
-        "| Frost  | 4     | 5       | 2      | 1    | 15     |\n"
+        "| Frost  | 4     | 5       | 2      | 1    | 15     |\n",
+        "\n",
+        "El MVP de esta ronda es  Viper"
       ]
     }
   ],
